# Induction_Y22

./: CMakeLists.txt  Masking_Centroid.py  OOPSassignment.cpp  OOPSassignmentFinal.cpp  README.md  README_ROS.md  SmbHighlevelController.hpp  WebCamEdges.py  Week1.md  Week2.md  a.py  config.yaml  gains.yaml  gazebo.launch  new.rviz  opencv  opencvImage.cpp  opencvWebcam.cpp  smb_gazebo_add.launch  smb_highlevel.launch  smb_highlevel_controller.cpp  smb_highlevel_controller_node.cpp  solution.cpp  tbs.cpp  webcam.py
Assignments/Computer_Vision/: OpenCV.py  cvass.cpp  main_1.py
Assignments/Computer_Vision/Background_Remover/: background_remover_AdityaThakur.py
Assignments/OOPs/: solution.cpp  tbs  tbs.cpp  vighnesh_OOPS_assignment.cpp
Assignments/OOPs/Solution/: main  solution.cpp  temp.txt
Assignments/OOPs/solved/: final.cpp
Assignments/ROS/Week 1/: README.md  approach.md  assign.launch  setup.bash  smb_gazebo_new.launch
Assignments/ROS/Week 2/Solution/: README.md
Assignments/ROS/Week 2/Solution/src/: README.md  smb_control  (+2 more)
Assignments/ROS/Week 2/Solution/src/smb_highlevel_controller/: CMakeLists.txt  package.xml
Assignments/ROS/Week 2/Solution/src/smb_highlevel_controller/config/: default.yaml
Assignments/ROS/Week 2/Solution/src/smb_highlevel_controller/launch/: exercise_2.launch
Assignments/ROS/Week 2/Solution/src/smb_highlevel_controller/src/: smb_highlevel_controller.cpp
Assignments/ROS/Week 3/Solution/: README.md
Assignments/ROS/Week 3/Solution/src/smb_highlevel_controller/: CMakeLists.txt  package.xml
Assignments/ROS/Week 3/Solution/src/smb_highlevel_controller/config/: default.yaml
Assignments/ROS/Week 3/Solution/src/smb_highlevel_controller/launch/: smb_highlevel_controller.launch
Assignments/ROS/Week 3/Solution/src/smb_highlevel_controller/src/: smb_highlevel_controller.cpp
Ros Week 1/: README.md
SITL Practice/Solution/: README.md
SITL Practice/Solution/src/square_path/: CMakeLists.txt  package.xml
SITL Practice/Solution/src/square_path/config/: default.yaml
SITL Practice/Solution/src/square_path/launch/: square_path.launch
SITL Practice/Solution/src/square_path/src/: square_path.cpp
Solutions/: Solution(OOPS).cpp
Solutions/Assignment2/: Canny Edge Detection.py  OpenCV Masking Question.py
(+1 files in other folders)
